# rust_opengl_experiment

./: Cargo.toml  README  renderdoc_capture_settings.cap
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: main.rs  resources.rs
src/generators/: mod.rs  mountain.rs
src/render_gl/: camera.rs  data.rs  mod.rs  object.rs  shader.rs
